feat(ansib): get micado host ip

--- a/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.0/hosts.yml.j2
+++ b/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.0/hosts.yml.j2
@@ -1,8 +1,8 @@
 all:
   hosts:
     micado:
-      ansible_host: 127.0.0.1
-      ansible_connection: local
+      ansible_host: {{ micado_host }}
+      ansible_connection: ssh
   children:
     edgenodes:
       hosts:
