--- a/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.0/hosts.yml.j2
+++ b/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.0/hosts.yml.j2
@@ -3,6 +3,8 @@ all:
     micado:
       ansible_host: {{ micado_host }}
       ansible_connection: ssh
+      ansible_user: ubuntu
+      ansible_ssh_private_key_file: /var/lib/micado/submitter/system/id_rsa_localhost
   children:
     edgenodes:
       hosts:
