fix(edge): stop edgecore pre-install

--- a/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.3/playbook/project/roles/micado_edge/join/templates/get-micado-edge.sh.j2
+++ b/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.3/playbook/project/roles/micado_edge/join/templates/get-micado-edge.sh.j2
@@ -155,6 +155,11 @@ EOF'
 
   echo "join cluster"
   $sh_c "keadm reset --force || echo 'Attempted Reset'"
+  if command -v systemctl >/dev/null 2>&1; then
+      $sh_c 'systemctl stop edgecore || echo "Edgecore not running"'
+  elif command -v service >/dev/null 2>&1; then
+      $sh_c 'service edgecore stop || echo "Edgecore not running"'
+  fi
   $sh_c "keadm join --cloudcore-ipport=$server:10000 --edgenode-name=$nodename --kubeedge-version=$kubeedge_version --token=$token"
 
   echo "configuring kubeedge..."
