--- a/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.3/hosts.yml.j2
+++ b/submitter/adaptors/ansible_adaptor/templates/micado-edge/v0.12.3/hosts.yml.j2
@@ -3,7 +3,7 @@ all:
     micado:
       ansible_host: {{ micado_host }}
       ansible_connection: ssh
-      ansible_user: ubuntu
+      ansible_user: {{ micado_user }}
       ansible_ssh_private_key_file: /var/lib/micado/submitter/system/id_rsa_localhost
   children:
     edgenodes:
